<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/BLUE"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint= "@string/fullname"
        android:paddingLeft="10dp"
        android:ems="10"
        android:textColor="@color/BLACK"
        android:id="@+id/fullname"
        android:layout_marginTop="56dp"
        android:background="@drawable/edittextdesign"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint= "@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:ems="10"
        android:textColor="@color/BLACK"
        android:background="@drawable/edittextdesign"
        android:layout_below="@+id/fullname"
        android:layout_marginTop="10dp"
        android:id="@+id/emailRegister" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:hint="Contact Number"
        android:ems="10"
        android:id="@+id/contact"
        android:background="@drawable/edittextdesign"
        android:layout_below="@+id/emailRegister"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint= "@string/username"
        android:paddingLeft="10dp"
        android:ems="10"
        android:textColor="@color/BLACK"
        android:background="@drawable/edittextdesign"
        android:layout_below="@+id/contact"
        android:layout_marginTop="10dp"
        android:id="@+id/username" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint= "@string/pwd"
        android:typeface="sans"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:ems="10"
        android:textColor="@color/BLACK"
        android:background="@drawable/edittextdesign"
        android:id="@+id/pwd"
        android:layout_below="@+id/username"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:typeface="sans"
        android:hint= "@string/confirmpwd"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:ems="10"
        android:textColor="@color/BLACK"
        android:background="@drawable/edittextdesign"
        android:id="@+id/confirmpwd"
        android:layout_below="@+id/pwd"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="REGISTER"
        android:id="@+id/register"
        android:textColor="@color/BLACK"
        android:background="@drawable/buttondesign"
        android:layout_below="@+id/confirmpwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />


</RelativeLayout>